Only show inline bios on web.

--- a/minutiae/intro.tex
+++ b/minutiae/intro.tex
@@ -1,4 +1,4 @@
-\begin{aosachapter}{Introduction}{s:intro}{Tavish Armstrong}
+\begin{aosachapter}{Introduction}{s:intro}{Michael DiBernardo}
 
 It's commonplace to say that
 computer hardware is now so fast
@@ -50,7 +50,7 @@ by letting you look over these experts' shoulders.
 
 \section*{Contributors}
 
-\hspace{\parindent} \emph{Tavish Armstrong (editorial)}: Tavish studies software engineering at Concordia University and hopes to graduate in the spring of 2014. His online home is \url{http://tavisharmstrong.com}.
+\hspace{\parindent} \emph{Michael DiBernardo (editorial)}: Hi.
 
 \emph{Michael Snoyman (Warp)}: Michael is the lead software engineer at FP Complete. He is the founder and lead developer of the Yesod Web Framework, which provides a means of creating robust, high-performance web applications. His formal studies include actuarial science, and he has previously worked in the US auto and homeowner insurance industry analyzing large data sets.
 
