--- a/tex/contingent.tex
+++ b/tex/contingent.tex
@@ -12,11 +12,11 @@ and that correct code is one of the most transparent forms of thought.}
 \emph{Daniel Rocco loves Python, coffee, craft, stout, object and system
 design, bourbon, teaching, trees, and Latin guitar. Thrilled that he
 gets to write Python for a living, he is always on the lookout for
-opportunities to learn from others in the community and to contribute
-back by sharing knowledge. He is a frequent speaker at PyAtl on
-introductory topics, testing, design, and shiny things; he loves seeing
-the spark of wonder and delight in people's eyes when someone shares a
-novel, surprising, or beautiful idea. Daniel lives in Atlanta with a
+opportunities to learn from others in the community, and to contribute
+by sharing knowledge. He is a frequent speaker at PyAtl on introductory
+topics, testing, design, and shiny things; he loves seeing the spark of
+wonder and delight in people's eyes when someone shares a novel,
+surprising, or beautiful idea. Daniel lives in Atlanta with a
 microbiologist and four aspiring rocketeers.}
 
 \aosasecti{Introduction}\label{introduction}
@@ -43,21 +43,20 @@ Should \texttt{make} discover, upon its next invocation, that the
 \texttt{main.o}, then it will not only rebuild the \texttt{main.o}
 object file but will also rebuild \texttt{prog} itself.
 
-Build systems are a common semester project posed for undergraduate
-computer science students - not only because build systems are used in
+Build systems are a common semester project assigned to undergraduate
+computer science students --- not only because build systems are used in
 nearly all software projects, but because their construction involves
 fundamental data structures and algorithms involving directed graphs
-(which this chapter will later discuss in more detail). With decades of
-use and practice behind build systems, one might expect them to have
-become completely general-purpose and ready for even the most
-extravagant demands.
+(which this chapter will later discuss in more detail).
 
-But, in fact, one kind of common interaction between build artifacts ---
-the problem of dynamic cross-referencing --- is handled so poorly by
-most build systems that in this chapter we are inspired to not only
-rehearse the standard solution and data structures used classically to
-solve the \texttt{make} problem, but to extend that solution
-dramatically to a far more demanding domain.
+With decades of use and practice behind build systems, one might expect
+them to have become completely general-purpose and ready for even the
+most extravagant demands. But, in fact, one kind of common interaction
+between build artifacts --- the problem of dynamic cross-referencing ---
+is handled so poorly by most build systems that in this chapter we are
+inspired to not only rehearse the classic solution and data structures
+used to solve the \texttt{make} problem, but to extend that solution
+dramatically, to a far more demanding domain.
 
 The problem, again, is cross-referencing. Where do cross-references tend
 to emerge? In text documents, documentation, and printed books!
@@ -111,11 +110,11 @@ Stripped of its markup, the text that results from the above title and
 
 This table of contents, as you can see, is a mash-up of information from
 four different files. While its basic order and structure come from
-\texttt{index.rst}, the actual title of each chapter and section is
+\texttt{index.rst}, the actual titles of each chapter and section are
 pulled from the three chapter source files themselves.
 
 If you later reconsider the tutorial's chapter title --- after all, the
-word ``newcomer'' sounds so antique, as if your users are settlers who
+word ``newcomer'' sounds so quaint, as if your users are settlers who
 have just arrived in pioneer Wyoming --- then you would edit the first
 line of \texttt{tutorial.rst} and write something better:
 
@@ -129,10 +128,10 @@ line of \texttt{tutorial.rst} and write something better:
 \end{verbatim}
 
 When you are ready to rebuild, Sphinx will do exactly the right thing!
-It will rebuild both the tutorial chapter itself, and also rebuild the
-index. (Piping the output into \texttt{cat} makes Sphinx announce each
-rebuilt file on a separate line, instead of using bare carriage returns
-to repeatedly overwrite a single line with these progress updates.)
+It will rebuild both the tutorial chapter itself, and the index. (Piping
+the output into \texttt{cat} makes Sphinx announce each rebuilt file on
+a separate line, instead of using bare carriage returns to repeatedly
+overwrite a single line with these progress updates.)
 
 \begin{verbatim}
    $ make html | cat
@@ -276,19 +275,19 @@ lineage:
 \end{verbatim}
 
 If you remove all of the output, you are guaranteed a complete rebuild!
-Some projects even alias \texttt{rm} \texttt{-r} a target named
+Some projects even alias \texttt{rm} \texttt{-r} to a target named
 \texttt{clean} so that only a quick \texttt{make} \texttt{clean} is
 necessary to wipe the slate.
 
 By eliminating every copy of every intermediate or output asset, a hefty
 \texttt{rm} \texttt{-r} is able to force the build to start over again
 with nothing cached --- with no memory of its earlier state that could
-possibly lead to a stale product!
+possibly lead to a stale product.
 
 But could we develop a better approach?
 
 What if your build system were a persistent process that noticed every
-chapter title, every section title, and every cross referenced phrase as
+chapter title, every section title, and every cross-referenced phrase as
 it passed from the source code of one document into the text of another?
 Its decisions about whether to rebuild other documents after a change to
 a single source file could be precise, instead of mere guesses, and
@@ -297,23 +296,23 @@ correct, instead of leaving the output in an inconsistent state.
 The result would be a system like the old static \texttt{make} tool, but
 which learned the dependencies between files as they were built --- that
 added and removed dependencies dynamically as cross references were
-added, updated, and then later deleted.
+added, updated, and deleted.
 
-In the sections that follow we will construct such a tool in Python,
-named Contingent, that guarantees correctness in the presence of dynamic
-dependencies while performing the fewest possible rebuild steps. While
-Contingent can be applied to any problem domain, we will run it against
-a small version of the problem outlined above.
+In the sections that follow we will construct such a tool, named
+Contingent, in Python. Contingent guarantees correctness in the presence
+of dynamic dependencies while performing the fewest possible rebuild
+steps. While it can be applied to any problem domain, we will run it
+against a small version of the problem outlined above.
 
-\aosasecti{Linking Tasks To Make a
+\aosasecti{Linking Tasks to Make a
 Graph}\label{linking-tasks-to-make-a-graph}
 
 Any build system needs a way to link inputs and outputs. The three
 markup texts in our discussion above, for example, each produce a
 corresponding HTML output file. The most natural way to express these
 relationships is as a collection of boxes and arrows --- or, in
-mathematician terminology, \emph{nodes} and \emph{edges} to form a
-\emph{graph} (\aosafigref{500l.contingent.graph}.)
+mathematical terminology, \emph{nodes} and \emph{edges} --- to form a
+\emph{graph} (\aosafigref{500l.contingent.graph}).
 
 \aosafigure[240pt]{contingent-images/figure1.png}{Three files generated by parsing three input texts.}{500l.contingent.graph}
 
@@ -332,8 +331,8 @@ imported.
 
 The \textbf{tuple} is a read-only sequence used to hold heterogeneous
 data --- each slot in a tuple typically means something different. Here,
-a tuple (e.g.~holds together a hostname and port number, and would lose
-its meaning if the elements were re-ordered:
+a tuple holds together a hostname and port number, and would lose its
+meaning if the elements were re-ordered:
 
 \begin{verbatim}
 ('dropbox.com', 443)
@@ -361,10 +360,10 @@ each have three elements:
 
 The \textbf{dict} is an associative data structure for storing values
 accessible by a key. Dicts let the programmer chose the key by which
-each value is indexed, instead of using automatic integer indexing like
-the tuple and list. The lookup is backed by a hash table, which means
+each value is indexed, instead of using automatic integer indexing as
+the tuple and list do. The lookup is backed by a hash table, which means
 that dict key lookup runs at the same speed whether the dict has a dozen
-or a million keys!
+or a million keys.
 
 \begin{verbatim}
 {'ssh': 22, 'telnet': 23, 'domain': 53, 'http': 80}
@@ -377,7 +376,8 @@ simple ones of the underlying tuples, lists, sets, and dicts.
 
 Given that each of our graph edges needs to know at least its origin
 node and its destination node, the simplest possible representation
-would be a tuple. The top edge in Figure~1 might look like:
+would be a tuple. The top edge in \aosafigref{500l.contingent.graph}
+might look like:
 
 \begin{verbatim}
     ('tutorial.rst', 'tutorial.html')
@@ -407,19 +407,21 @@ Unfortunately, those are not the only operations we need.
 
 A build system like Contingent needs to understand the relationship
 between a given node and all the nodes connected to it. For example,
-when \texttt{api.rst} changes, Contingent needs to know which assets are
-affected by that change, if any, in order to minimize the work performed
+when \texttt{api.rst} changes, Contingent needs to know which assets, if
+any, are affected by that change in order to minimize the work performed
 while also ensuring a complete build. To answer this question --- ``what
 nodes are downstream from \texttt{api.rst}?'' --- we need to examine the
-\emph{outgoing} edges from \texttt{api.rst}. But building the dependency
-graph requires that Contingent be concerned with a node's \emph{inputs}
-as well. What inputs were used, for example, when the build system
-assembled the output document \texttt{tutorial.html}? It is by watching
-the input to each node that Contingent can know that \texttt{api.html}
-depends on \texttt{api.rst} but that \texttt{tutorial.html} does not. As
-sources change and rebuilds occur, Contingent rebuilds the incoming
-edges of each changed node to remove potentially stale edges and
-re-learn which resources a task uses this time around.
+\emph{outgoing} edges from \texttt{api.rst}.
+
+But building the dependency graph requires that Contingent be concerned
+with a node's \emph{inputs} as well. What inputs were used, for example,
+when the build system assembled the output document
+\texttt{tutorial.html}? It is by watching the input to each node that
+Contingent can know that \texttt{api.html} depends on \texttt{api.rst}
+but that \texttt{tutorial.html} does not. As sources change and rebuilds
+occur, Contingent rebuilds the incoming edges of each changed node to
+remove potentially stale edges and re-learn which resources a task uses
+this time around.
 
 Our set-of-tuples does not make answering either of these questions
 easy. If we needed to know the relationship between \texttt{api.html}
@@ -486,11 +488,11 @@ structure supports the fast lookup that Contingent needs.
 
 You may have been surprised by the absence of classes in the above
 discussion of Python data structures. After all, classes are a frequent
-mechanism for structuring applications and a hardly less frequent
+mechanism for structuring applications and a hardly less-frequent
 subject of heated debate among their adherents and detractors. Classes
 were once thought important enough that entire educational curricula
 were designed around them, and the majority of popular programming
-languanges include dedicated syntax for defining and using them.
+languages include dedicated syntax for defining and using them.
 
 But it turns out that classes are often orthogonal to the question of
 data structure design. Rather than offering us an entirely alternative
@@ -514,13 +516,13 @@ implementation details encapsulated behind a consistent and memorable
 interface.
 
 So instead of putting a hostname and a port number together in a tuple
-and having to remember later which came first and which came second, you
+and having to remember which came first and which came second, you
 create an \texttt{Address} class whose instances each have a
 \texttt{host} and a \texttt{port} attribute. You can then pass
 \texttt{Address} objects around where otherwise you would have had
 anonymous tuples. Code becomes easier to read and easier to write. But
 using a class instance does not really change any of the questions we
-faced above when doing data design: it just provides a prettier and less
+faced above when doing data design; it just provides a prettier and less
 anonymous container.
 
 The true value of classes, then, is not that they change the science of
@@ -531,8 +533,8 @@ Successful application design hinges upon our ability to exploit the
 powerful built-in data structures Python offers us while minimizing the
 volume of details we are required to keep in our heads at any one time.
 Classes provide the mechanism for resolving this apparent quandary: used
-effectively, a class provides a \emph{facade} around some small subset
-of the system's overall design. When working within one subset --- a
+effectively, a class provides a facade around some small subset of the
+system's overall design. When working within one subset --- a
 \texttt{Graph}, for example --- we can forget the implementation details
 of other subsets as long as we can remember their interfaces. In this
 way, programmers often find themselves navigating among several levels
@@ -577,13 +579,12 @@ user-defined classes and interfaces for everything in the system:
 The Python language and community explicitly and intentionally emphasize
 using simple, generic data structures to solve problems, instead of
 creating custom classes for every minute detail of the problem we want
-to tackle. This is one facet of the notion of ``Pythonic'' solutions
-that you may have read about. Pythonic solutions try to minimize
-syntactic overhead and leverage Python's powerful built-in tools and
-extensive standard library.
+to tackle. This is one facet of the notion of ``Pythonic'' solutions:
+Pythonic solutions try to minimize syntactic overhead and leverage
+Python's powerful built-in tools and extensive standard library.
 
 With these considerations in mind, let's return to the \texttt{Graph}
-class, examining its design and implmentation to see the interplay
+class, examining its design and implementation to see the interplay
 between data structures and class interfaces. When a new \texttt{Graph}
 instance is constructed, a pair of dictionaries has already been built
 to store edges using the logic we outlined in the previous section:
@@ -602,16 +603,16 @@ The leading underscore in front of the attribute names
 convention in the Python community to signal that an attribute is
 private. This convention is one way the community suggests that
 programmers pass messages and warnings through space and time to each
-other. Recognizing the need to signal differences among public versus
+other. Recognizing the need to signal differences between public and
 internal object attributes, the community adopted the single leading
 underscore as a concise and fairly consistent indicator to other
 programmers, including our future selves, that the attribute is best
 treated as part of the invisible internal machinery of the class.
 
-Why are we using a ``defaultdict'' instead of a standard dict? A common
-problem when composing dicts with other data structures is handling
-missing keys. With a normal dict, retrieving a key that does not exist
-raises a \texttt{KeyError}:
+Why are we using a \texttt{defaultdict} instead of a standard dict? A
+common problem when composing dicts with other data structures is
+handling missing keys. With a normal dict, retrieving a key that does
+not exist raises a \texttt{KeyError}:
 
 \begin{verbatim}
 >>> consequences_of = {}
@@ -634,9 +635,9 @@ handle this specific case, for example when adding a new edge:
 \end{verbatim}
 
 This need is so common that Python includes a special utility, the
-defaultdict, which lets you provide a function that returns a value for
-absent keys. When we ask about an edge that the \texttt{Graph} hasn't
-yet seen, we will get back an empty \texttt{set} instead of an
+\texttt{defaultdict}, which lets you provide a function that returns a
+value for absent keys. When we ask about an edge that the \texttt{Graph}
+hasn't yet seen, we will get back an empty \texttt{set} instead of an
 exception:
 
 \begin{verbatim}
@@ -647,7 +648,7 @@ set()
 \end{verbatim}
 
 Structuring our implementation this way means that each key's first use
-can look identical to second-and-subsequent-times that a particular key
+can look identical to second and subsequent times that a particular key
 is used:
 
 \begin{verbatim}
@@ -691,14 +692,13 @@ having to learn how to traverse our data structure:
                        for b in self.sorted(self._consequences_of[a])]
 \end{verbatim}
 
-The \texttt{Graph.sorted()} method, if you want to examine it later,
-makes an attempt to sort the nodes in case they have a natural sort
-order (such as alphabetical) that can provide a stable output order for
-the user.
+The \texttt{Graph.sorted()} method makes an attempt to sort the nodes in
+a natural sort order (such as alphabetical) that can provide a stable
+output order for the user.
 
 By using this traversal method we can see that, following our three
 ``add'' method calls earlier, \texttt{g} now represents the same graph
-that we saw in Figure~1.
+that we saw in \aosafigref{500l.contingent.graph}.
 
 \begin{verbatim}
 >>> from pprint import pprint
@@ -720,8 +720,9 @@ building a blog from source files, it will need to know things like
 \end{verbatim}
 
 This \texttt{Graph} is telling Contingent that, when \texttt{api.rst}
-changes, \texttt{api.html} is now stale and must be rebuilt. How about
-\texttt{index.html}?
+changes, \texttt{api.html} is now stale and must be rebuilt.
+
+How about \texttt{index.html}?
 
 \begin{verbatim}
 >>> g.immediate_consequences_of('index.html')
@@ -771,11 +772,11 @@ consequences for the various artifacts in our project's documentation.
 \aosasecti{Learning Connections}\label{learning-connections}
 
 We now have a way for Contingent to keep track of tasks and the
-relationships between them. If we look more closely at Figure 2,
-however, we see that it is actually a little hand wavy and vague:
-\emph{how} is \texttt{api.html} produced from \texttt{api.rst}? How do
-we know that \texttt{index.html} needs the title from the tutorial? And
-how is this dependency resolved?
+relationships between them. If we look more closely at
+\aosafigref{500l.contingent.graph2}, however, we see that it is actually
+a little hand-wavy and vague: \emph{how} is \texttt{api.html} produced
+from \texttt{api.rst}? How do we know that \texttt{index.html} needs the
+title from the tutorial? And how is this dependency resolved?
 
 Our intuitive notion of these ideas served when we were constructing
 consequences graphs by hand, but unfortunately computers are not
@@ -799,7 +800,7 @@ ourselves from wallowing around in a bog of details, for this
 illustration we will work with simplified input and output document
 formats. Our input documents will consist of a title on the first line,
 with the remainder of the text forming the body. Cross references will
-simply be source file names enclosed in back ticks, which on output are
+simply be source file names enclosed in backticks, which on output are
 replaced with the title from the corresponding document in the output.
 
 Here is the content of our example \texttt{index.txt}, \texttt{api.txt},
@@ -832,7 +833,7 @@ cross-references from our little document format:
 Now that we have some source material to work with, what functions would
 a Contingent-based blog builder need?
 
-In the simplistic examples above, the HTML output files proceed directly
+In the simple examples above, the HTML output files proceed directly
 from the source, but in a realistic system, turning source into markup
 involves several steps: reading the raw text from disk, parsing the text
 to a convenient internal representation, processing any directives the
@@ -885,9 +886,9 @@ the rest of the content is considered the document's body.
 
 Because the format is so simple, the parser is a little silly,
 admittedly, but it illustrates the interpretive responsibilities that
-parsers are required to carry out. Parsing in general is a very
+parsers are required to carry out. (Parsing in general is a very
 interesting subject and many books have been written either partially or
-completely dedicated to it. In a system like Sphinx, the parser must
+completely about it.) In a system like Sphinx, the parser must
 understand the many markup tokens, directives, and commands defined by
 the system, transforming the input text into something the rest of the
 system can work with.
@@ -965,7 +966,7 @@ We hope you enjoy it.
 
 \aosafigref{500l.contingent.graph3} illustrates the task graph that
 transitively connects all the tasks required to produce the output, from
-reading the input file, parsing and transforming the document, and
+reading the input file, to parsing and transforming the document, and
 rendering the result:
 
 \aosafigure[240pt]{contingent-images/figure3.png}{A task graph.}{500l.contingent.graph3}
@@ -977,10 +978,10 @@ it maintains its own call stack, similar to the stack of live execution
 frames that Python maintains to remember which function to continue
 running when the current one returns.
 
-Every time that a new task is invoked, Contingent can assume that it has
-been called --- and that its output will be used --- by the task
-currently at the top of the stack. Maintaining the stack will require
-that several extra steps surround the invocation of a task~~\emph{T}:
+Every time a new task is invoked, Contingent can assume that it has been
+called --- and that its output will be used --- by the task currently at
+the top of the stack. Maintaining the stack will require that several
+extra steps surround the invocation of a task~\emph{T}:
 
 \begin{aosaenumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1016,8 +1017,8 @@ task functions that focus on document processing. Here is what the
 \end{verbatim}
 
 This is an entirely typical Python decorator declaration. It can then be
-applied to a function by naming it after a \texttt{@} character atop the
-\texttt{def} that creates the function:
+applied to a function by naming it after an \texttt{@} character atop
+the \texttt{def} that creates the function:
 
 \begin{verbatim}
     @task
@@ -1075,7 +1076,7 @@ This wrapper performs several crucial maintenance steps:
   its turn, to invoke further tasks in the course of doing its work.
 \item
   Invoke the task inside of a \texttt{try...finally} block that ensures
-  we correctly remove the finished task from the stack even if it dies
+  we correctly remove the finished task from the stack, even if it dies
   by raising an exception.
 \item
   Return the task's return value, so that callers of this wrapper will
@@ -1126,7 +1127,7 @@ read('tutorial.txt')
 \end{verbatim}
 
 The consequence of re-reading the \texttt{tutorial.txt} file and finding
-its contents have changed is that we need to re-execute the
+that its contents have changed is that we need to re-execute the
 \texttt{parse()} routine for that document. What happens if we render
 the entire set of documents? Will Contingent be able to learn the entire
 build process with its interrelationships?
@@ -1157,9 +1158,9 @@ the <a href="tutorial.txt">Beginners Tutorial</a> first.
 \end{verbatim}
 
 It worked! From the output, we can see that our transform substituted
-the docuent titles for the directives in our source docuents, indicating
-that Contingent was able to discover the connections between the various
-tasks needed to build our documents.
+the document titles for the directives in our source documents,
+indicating that Contingent was able to discover the connections between
+the various tasks needed to build our documents.
 
 \aosafigure[240pt]{contingent-images/figure4.png}{The complete set of relationships
    between our input files and our HTML outputs.}{500l.contingent.graph4}
@@ -1174,7 +1175,7 @@ to any tasks change.
 
 Once the initial build has run to completion, Contingent needs to
 monitor the input files for changes. When the user finishes a new edit
-and runs ``Save,'' both the \texttt{read()} method and its consequences
+and runs ``Save'', both the \texttt{read()} method and its consequences
 need to be invoked.
 
 This will require us to walk the graph in the opposite order from the
@@ -1186,10 +1187,10 @@ new content, and we need to figure out what consequences lie downstream.
 
 The process of compiling consequences is a recursive one, as each
 consequence can itself have further tasks that depended on it. We could
-perform this recursion manually through repeated calls to the graph
-(note that we are here taking advantage of the fact that the Python
+perform this recursion manually through repeated calls to the graph.
+(Note that we are here taking advantage of the fact that the Python
 prompt saves the last value displayed under the name \texttt{\_} for use
-in the subsequent expression):
+in the subsequent expression.)
 
 \begin{verbatim}
 >>> task = Task(read, ('api.txt',))
@@ -1231,16 +1232,16 @@ it once in the output list, and to move it close to the end so that it
 appears only after the tasks that are its inputs. This intelligence is
 powered by the classic depth-first implementation of a topological sort,
 an algorithm which winds up being fairly easy to write in Python through
-a hidden a recursive helper function. Check out the \texttt{graphlib.py}
+a hidden recursive helper function. Check out the \texttt{graphlib.py}
 source code for the details.
 
-If upon detecting a change we are careful to re-run every task in the
+If, upon detecting a change, we are careful to re-run every task in the
 recursive consequences, then Contingent will be able to avoid rebuilding
 too little. Our second challenge, however, was to avoid rebuilding too
-much. Refer again to Figure~4. We want to avoid rebuilding all three
-documents every time that \texttt{tutorial.txt} is changed, since most
-edits will probably not affect its title but only its body. How can this
-be accomplished?
+much. Refer again to \aosafigref{500l.contingent.graph4}. We want to
+avoid rebuilding all three documents every time that
+\texttt{tutorial.txt} is changed, since most edits will probably not
+affect its title but only its body. How can this be accomplished?
 
 The solution is to make graph recomputation dependent on caching. When
 stepping forward through the recursive consequences of a change, we will
@@ -1248,10 +1249,10 @@ only invoke tasks whose inputs are different than last time.
 
 This optimization will involve a final data structure. We will give the
 \texttt{Project} a \texttt{\_todo} set with which to remember every task
-for which at least one input value has changed, and that therefore
+for which at least one input value has changed, and which therefore
 requires re-execution. Because only tasks in \texttt{\_todo} are
-out-of-date, the build process can skip running any other tasks unless
-they appear there.
+out-of-date, the build process can skip running any tasks unless they
+appear there.
 
 Again, Python's convenient and unified design makes these features very
 easy to code. Because task objects are hashable, \texttt{\_todo} can
@@ -1368,21 +1369,21 @@ calling title_of('tutorial.txt')
 
 Success! Only one document got rebuilt. The fact that
 \texttt{title\_of()}, given a new input document, nevertheless returned
-the same value means that all further downstream tasks were insulated
+the same value, means that all further downstream tasks were insulated
 from the change and did not get re-invoked.
 
 \aosasecti{Conclusion}\label{conclusion}
 
 There exist languages and programming methodologies under which
-Contingent would be a suffocating forest of tiny classes giving useless
-and verbose names to every concept in the problem domain.
+Contingent would be a suffocating forest of tiny classes, with useless
+and verbose names given to every concept in the problem domain.
 
 When programming Contingent in Python, however, we skipped the creation
-of a dozen classes that could have existed, like \texttt{TaskArgument}
-and \texttt{CachedResult} and \texttt{ConsequenceList}. We instead drew
-upon Python's strong tradition of solving generic problems with generic
-data structures, resulting in code that repeatedly uses a small set of
-ideas from the core data structures tuple, list, set, and dict.
+of a dozen possible classes like \texttt{TaskArgument} and
+\texttt{CachedResult} and \texttt{ConsequenceList}. We instead drew upon
+Python's strong tradition of solving generic problems with generic data
+structures, resulting in code that repeatedly uses a small set of ideas
+from the core data structures tuple, list, set, and dict.
 
 But does this not cause a problem?
 
