Adding reviewers to intro.

--- a/minutiae/intro.tex
+++ b/minutiae/intro.tex
@@ -114,54 +114,76 @@ I'm also grateful to Tony Arkles for his help in the earlier stages of editing,
 and to our technical reviewers:
  
 \begin{multicols}{3}
-\noindent Colin Morris \\
-Corey Chivers \\
-Greg Wilson \\
-Julia Evans \\
-Kamal Marhubi \\
-Kim Moir \\
-Laurie MacDougall Sookraj \\
-Logan Smyth \\
-Monica Dinculescu \\
-Nikita Pchelin \\
-Natalie Black \\
-Pierre-Antoine Lafayette \\
+\noindent Amber Yust \\
+Andrew Gwozdziewycz \\
+Andrew Kuchling \\
+Andrew Svetlov \\
+Andy Shen \\
+Anton Beloglazov \\
+Ben Trofatter \\
+Borys Pierov \\
+Carise Fernandez \\
+Charles	Stanhope \\
+Chris Atlee \\
+Chris Seaton \\
+Cyryl Płotnicki-Chudyk \\
+Dan Langer \\
+Dan Shapiro \\
+David Pokorny \\
+Eric Bouwers \\
+Frederic De Groef \\
+Graham Lee \\
+Gregory Eric Sanderson \\
+James O'Beirne \\
+Jan de Baat \\
+Jana Beck \\
+Jessica McKellar \\
+Jo Van Eyck \\
+Joel Crocker \\
+Johan Thelin \\
+Johannes Fürmann \\
+John Morrissey \\
+Joseph Kaptur \\
+Josh Crompton \\
+Joshua T. Corbin \\
+Kevin Huang \\
+Maggie Zhou \\
+Marc Towler \\
+Marcin Milewski \\
+Marco Lancini \\
+Mark Reid \\
+Matthias Bussonnier \\
+Max Mautner \\
+Meggin Kearney \\
+Mike Aquino \\
+Natalie	Black \\
+Nick Presta \\
+Nikhil Almeida \\
+Nolan Prescott \\
+Paul Martin \\
+Piotr Banaszkiewicz \\
+Preston Holmes \\
+Pulkit Sethi \\
+Rail Aliiev \\
+Ronin Narkis \\
+Rose Ames \\
+Sina Jahan \\
+Stefan Turalski \\
+William Lachance \\
 \end{multicols}
 
 \newpage  %% to rescue widowed line "A small army". 
 
-\noindent A small army of copyeditors and helpers ensured the book got published this decade:
-
-\begin{multicols}{3}
-\noindent Adam Fletcher \\
-Amy Brown \\
-Danielle Pham \\
-Erik Habbinga \\
-Jeff Schwab  \\
-Jessica McKellar \\
-Michael Baker \\
-Natalie Black \\
-Alexandra Phillips \\
-Peter Rood
-\end{multicols}
+\noindent Special thanks to Chris Seaton, John Morrissey, and Natalie Black for going above and beyond in their technical reviewing. The quantity and depth of their reviews was instrumental in moving the book forward at several sticking points.
 
 Amy Brown, Bruno Kinoshita, and Danielle Pham deserve special thanks
 for their help with the book's build process and graphics.
 
-Editing a book is a difficult task,
-but it gets easier when you have encouraging friends.
-Natalie Black, Julia Evans, and Kamal Marhubi were patient and enthusiastic throughout.
 
 \section*{Contributing}
 
-% TODO update this
-
-Dozens of volunteers worked hard to create this book,
-but there is still a lot to do.
-If you'd like to help,
-you can do so by reporting errors,
-translating the content into other languages,
-or describing other open source systems.
-Please contact us at \code{aosa@aosabook.org} if you would like to get involved.
+If you'd like to report errors or translate the content into other languages,
+please open an issue at \code{github.com/aosabook/500lines/} or contact us at
+\code{aosa@aosabook.org}.
 
 \end{aosachapter}
