--- a/minutiae/intro.tex
+++ b/minutiae/intro.tex
@@ -52,7 +52,7 @@ by letting you look over these experts' shoulders.
 
 \hspace{\parindent} \emph{Michael DiBernardo (editorial)}: TODO.
 
-\hspace{\parindent} \emph{Amy Brown (editorial)}: TODO.
+\hspace{\parindent} \emph{Amy Brown (editorial)}: Amy Brown is a freelance editor based in Toronto. She specializes in science and academic editing, and working with self-publishing authors. She co-edited the \emph{Architecture of Open Source Applications} books with Greg Wilson. When she's not editing, she likes to sing and read.
 
 \emph{Dethe Elza (Blockcode)}: Dethe is a geek dad, aesthetic programmer, mentor, and creator of the Waterbear visual programming tool. He co-hosts the Vancouver Maker Education Salons and wants to fill the world with robotic origami rabbits. 
 
